--- a/src/components/contract/_contract.scss
+++ b/src/components/contract/_contract.scss
@@ -26,8 +26,8 @@
     }
 
     .contract__wrapper {
-        width: 80%;
-        padding-left: 300px;
+        width: 60%;
+        // padding-left: 300px;
         margin: 0 auto;
 
         h2 {
