--- a/src/views/restaurant/restaurant.scss
+++ b/src/views/restaurant/restaurant.scss
@@ -15,8 +15,8 @@
 
 
         .wrapper {
-            padding-left: 300px;
-            width: 80%;
+            // padding-left: 300px;
+            width: 70%;
             margin: 0 auto;
 
             h2 {
@@ -48,8 +48,9 @@
 
     &__menu {
         .menu__wrapper {
-            width: 80%;
-            padding: 60px 0 60px 300px;
+            width: 70%;
+            // padding: 60px 0 60px 300px;
+            padding: 60px 0;
             margin: 0 auto;
 
             h2 {
