update reservation  page

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,5 @@
  @import "../src/views/services/services.scss";
  @import "../src//views//voucher/vouchers.scss";
  @import "../src/views/contract/contract.scss";
+ @import "../src/views/reservation/reservation";
+ @import "../src/views/bill/bill.scss";
