--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     line-height: 22px;
-    padding: 10px 60px;
+    padding: 10px 60px 5px;
 
     display: flex;
     justify-content: space-between;
@@ -27,6 +27,7 @@
         width: 60%;
 
         .reservation {
+            margin-top: 5px;
             display: flex;
             justify-content: end;
         }
@@ -36,7 +37,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                padding: 20px 0 0px;
+                padding-top: 10px;
                 font-family: $font-fam;
 
                 li {
